--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -7,9 +7,8 @@
   text-align: center;
 }
 
-
-/* @media (min-width: 500px) {
+@media (min-width: 500px) {
   .Person {
-    witdh: 450px
+    width: 450px
   }
-} */
+}
